--- a/src/pages/hotellit-ja-majatalot.astro
+++ b/src/pages/hotellit-ja-majatalot.astro
@@ -3,7 +3,14 @@ import Layout from '../layouts/Layout.astro'
 import Button from '../components/common/Button.astro'
 ---
 
-<Layout>
+<Layout
+    title="Hotellin työvuorolistat keittiöstä vastaanottoon | Työvuorolista.fi"
+    description="Yhdistä vastaanoton, keittiön ja siivouksen aikataulut yhteen näkymään. Pitää koko henkilökunnan ajan tasalla. Kokeile ilmaiseksi!"
+    ogTitle="Hotellin työvuorolistat keittiöstä vastaanottoon"
+    ogDescription="Luo tiimejä eri osastoille ja estä tuplabuukkaukset. Päiväkohtaiset muistiinpanot tapahtumille ja konferensseille. Lomasuunnittelu pitää kesälomat hallinnassa."
+    ogUrl="https://tyovuorolista.fi/hotellit-ja-majatalot"
+    ogImage="https://tyovuorolista.fi/assets/metaImage.png"
+>
     <div class="landing-wrapper">
         <div class="hero-section">
             <h1>Hotellin työvuorolistat keittiöstä vastaanottoon</h1>
