--- a/src/pages/ravintolat-ja-kahvilat.astro
+++ b/src/pages/ravintolat-ja-kahvilat.astro
@@ -3,7 +3,14 @@ import Layout from '../layouts/Layout.astro'
 import Button from '../components/common/Button.astro'
 ---
 
-<Layout>
+<Layout
+    title="Ravintolan työvuorolistat helposti ja nopeasti | Työvuorolista.fi"
+    description="Unohda Excel ja paperiset listat. Työvuorolista tekee ravintolan ja kahvilan työvuorosuunnittelusta nopeaa ja virheetöntä. Kokeile ilmaiseksi!"
+    ogTitle="Ravintolan työvuorolistat helposti ja nopeasti"
+    ogDescription="Hallitse kiireiset lounas- ja iltavuorot drag-and-drop-kalenterissa. Tiimien hallinta keittiölle, salille ja baaripuolelle. Ilmainen ≤3 työntekijää."
+    ogUrl="https://tyovuorolista.fi/ravintolat-ja-kahvilat"
+    ogImage="https://tyovuorolista.fi/assets/metaImage.png"
+>
     <div class="landing-wrapper">
         <div class="hero-section">
             <h1>Ravintolan työvuorolistat helposti ja nopeasti</h1>
