--- a/src/pages/siivous-ja-kiinteistopalvelut.astro
+++ b/src/pages/siivous-ja-kiinteistopalvelut.astro
@@ -3,7 +3,14 @@ import Layout from '../layouts/Layout.astro'
 import Button from '../components/common/Button.astro'
 ---
 
-<Layout>
+<Layout
+    title="Siivousalan työvuorosuunnittelu ilman turhaa säätöä | Työvuorolista.fi"
+    description="Hallinnoi useita kohteita ja liikkuvia tiimejä helposti. Rakennettu nopeaan monipaikkaiseen työvuorosuunnitteluun. Kokeile ilmaiseksi!"
+    ogTitle="Siivousalan työvuorosuunnittelu ilman turhaa säätöä"
+    ogDescription="Jaa työntekijät useisiin tiimeihin ja kohteisiin. Kohdekohtaiset muistiinpanot ovikoodeineen. Raportoi toteutuneet tunnit palkanlaskentaan automaattisesti."
+    ogUrl="https://tyovuorolista.fi/siivous-ja-kiinteistopalvelut"
+    ogImage="https://tyovuorolista.fi/assets/metaImage.png"
+>
     <div class="landing-wrapper">
         <div class="hero-section">
             <h1>Siivousalan työvuorosuunnittelu ilman turhaa säätöä</h1>
