--- a/src/pages/taksiyritykset-ja-kuljetus.astro
+++ b/src/pages/taksiyritykset-ja-kuljetus.astro
@@ -3,7 +3,14 @@ import Layout from '../layouts/Layout.astro'
 import Button from '../components/common/Button.astro'
 ---
 
-<Layout>
+<Layout
+    title="Taksien ja kuljetusalan työvuorolistat vaivatta | Työvuorolista.fi"
+    description="Selkeät päivä- ja yövuorot yhdellä työkalulla. Nopeuttaa kuljettajien aikataulutusta ja varmistaa henkilökohtaiset listat. Kokeile ilmaiseksi!"
+    ogTitle="Taksien ja kuljetusalan työvuorolistat vaivatta"
+    ogDescription="Epäsäännölliset työajat? Drag-and-drop tekee vuorojen vaihtamisesta helppoa. Kuljettaja voi kuulua useaan tiimiin. Palkanlaskennan raportti Procountoriin."
+    ogUrl="https://tyovuorolista.fi/taksiyritykset-ja-kuljetus"
+    ogImage="https://tyovuorolista.fi/assets/metaImage.png"
+>
     <div class="landing-wrapper">
         <div class="hero-section">
             <h1>Taksien ja kuljetusalan työvuorolistat vaivatta</h1>
