--- a/src/pages/tapahtumat-ja-sesonkityo.astro
+++ b/src/pages/tapahtumat-ja-sesonkityo.astro
@@ -3,7 +3,14 @@ import Layout from '../layouts/Layout.astro'
 import Button from '../components/common/Button.astro'
 ---
 
-<Layout>
+<Layout
+    title="Sesonkityön työvuorot helposti ja nopeasti | Työvuorolista.fi"
+    description="Pop-up-ravintola, kesäfestari tai joulumarkkinat? Toimii heti ilman pitkiä sopimuksia. Ilmainen pienille tiimeille. Kokeile!"
+    ogTitle="Sesonkityön työvuorot helposti ja nopeasti"
+    ogDescription="Kuukausi- tai vuosilaskutus, lopeta milloin haluat. Julkaise vuorolistat WhatsAppissa tai sähköpostilla yhdellä klikkauksella."
+    ogUrl="https://tyovuorolista.fi/tapahtumat-ja-sesonkityo"
+    ogImage="https://tyovuorolista.fi/assets/metaImage.png"
+>
     <div class="landing-wrapper">
         <div class="hero-section">
             <h1>Sesonkityön työvuorot helposti ja nopeasti</h1>
