--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -8,7 +8,7 @@ import logo from '../../assets/logo.png'
 <nav class='nav'>
     <div class='nav-container'>
         <a href='/' class='logo'>
-            <Image src={logo} alt="Työvuorolista.fi logo" class="logo-symbol" quality="max" />
+            <Image src={logo} alt="tyovuorolista.fi logo" class="logo-symbol" quality="max" />
             <div class="logo-text">
                 <h1>Tyovuorolista.fi</h1>
                 <h4>PK-yrityksen työvuorolista nopeasti ja helposti</h4>
