--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,9 @@ import Navigation from '../components/navigation/Navigation.astro'
 import Footer from '../components/navigation/Footer.astro'
 
 const { 
-  title = "Työvuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti",
+  title = "tyovuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti",
   description = "PK-yrityksen työvuorolistan suunnittelu ja julkaisu eri tiimeille helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!",
-  ogTitle = "Työvuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti",
+  ogTitle = "tyovuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti",
   ogDescription = "PK-yrityksen työvuorolistan suunnittelu ja julkaisu eri tiimeille helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!",
   ogUrl = "https://tyovuorolista.fi/",
   ogImage = "https://tyovuorolista.fi/assets/metaImage.png"
