--- a/src/pages/hotellit-ja-majatalot.astro
+++ b/src/pages/hotellit-ja-majatalot.astro
@@ -4,7 +4,7 @@ import Button from '../components/common/Button.astro'
 ---
 
 <Layout
-    title="Hotellin työvuorolistat keittiöstä vastaanottoon | Työvuorolista.fi"
+    title="Hotellin työvuorolistat keittiöstä vastaanottoon | tyovuorolista.fi"
     description="Yhdistä vastaanoton, keittiön ja siivouksen aikataulut yhteen näkymään. Pitää koko henkilökunnan ajan tasalla. Kokeile ilmaiseksi!"
     ogTitle="Hotellin työvuorolistat keittiöstä vastaanottoon"
     ogDescription="Luo tiimejä eri osastoille ja estä tuplabuukkaukset. Päiväkohtaiset muistiinpanot tapahtumille ja konferensseille. Lomasuunnittelu pitää kesälomat hallinnassa."
