--- a/src/pages/ravintolat-ja-kahvilat.astro
+++ b/src/pages/ravintolat-ja-kahvilat.astro
@@ -4,7 +4,7 @@ import Button from '../components/common/Button.astro'
 ---
 
 <Layout
-    title="Ravintolan työvuorolistat helposti ja nopeasti | Työvuorolista.fi"
+    title="Ravintolan työvuorolistat helposti ja nopeasti | tyovuorolista.fi"
     description="Unohda Excel ja paperiset listat. Työvuorolista tekee ravintolan ja kahvilan työvuorosuunnittelusta nopeaa ja virheetöntä. Kokeile ilmaiseksi!"
     ogTitle="Ravintolan työvuorolistat helposti ja nopeasti"
     ogDescription="Hallitse kiireiset lounas- ja iltavuorot drag-and-drop-kalenterissa. Tiimien hallinta keittiölle, salille ja baaripuolelle. Ilmainen ≤3 työntekijää."
