--- a/src/pages/siivous-ja-kiinteistopalvelut.astro
+++ b/src/pages/siivous-ja-kiinteistopalvelut.astro
@@ -4,7 +4,7 @@ import Button from '../components/common/Button.astro'
 ---
 
 <Layout
-    title="Siivousalan työvuorosuunnittelu ilman turhaa säätöä | Työvuorolista.fi"
+    title="Siivousalan työvuorosuunnittelu ilman turhaa säätöä | tyovuorolista.fi"
     description="Hallinnoi useita kohteita ja liikkuvia tiimejä helposti. Rakennettu nopeaan monipaikkaiseen työvuorosuunnitteluun. Kokeile ilmaiseksi!"
     ogTitle="Siivousalan työvuorosuunnittelu ilman turhaa säätöä"
     ogDescription="Jaa työntekijät useisiin tiimeihin ja kohteisiin. Kohdekohtaiset muistiinpanot ovikoodeineen. Raportoi toteutuneet tunnit palkanlaskentaan automaattisesti."
