--- a/src/pages/taksiyritykset-ja-kuljetus.astro
+++ b/src/pages/taksiyritykset-ja-kuljetus.astro
@@ -4,7 +4,7 @@ import Button from '../components/common/Button.astro'
 ---
 
 <Layout
-    title="Taksien ja kuljetusalan työvuorolistat vaivatta | Työvuorolista.fi"
+    title="Taksien ja kuljetusalan työvuorolistat vaivatta | tyovuorolista.fi"
     description="Selkeät päivä- ja yövuorot yhdellä työkalulla. Nopeuttaa kuljettajien aikataulutusta ja varmistaa henkilökohtaiset listat. Kokeile ilmaiseksi!"
     ogTitle="Taksien ja kuljetusalan työvuorolistat vaivatta"
     ogDescription="Epäsäännölliset työajat? Drag-and-drop tekee vuorojen vaihtamisesta helppoa. Kuljettaja voi kuulua useaan tiimiin. Palkanlaskennan raportti Procountoriin."
