--- a/src/pages/tapahtumat-ja-sesonkityo.astro
+++ b/src/pages/tapahtumat-ja-sesonkityo.astro
@@ -4,7 +4,7 @@ import Button from '../components/common/Button.astro'
 ---
 
 <Layout
-    title="Sesonkityön työvuorot helposti ja nopeasti | Työvuorolista.fi"
+    title="Sesonkityön työvuorot helposti ja nopeasti | tyovuorolista.fi"
     description="Pop-up-ravintola, kesäfestari tai joulumarkkinat? Toimii heti ilman pitkiä sopimuksia. Ilmainen pienille tiimeille. Kokeile!"
     ogTitle="Sesonkityön työvuorot helposti ja nopeasti"
     ogDescription="Kuukausi- tai vuosilaskutus, lopeta milloin haluat. Julkaise vuorolistat WhatsAppissa tai sähköpostilla yhdellä klikkauksella."
