--- a/src/components/mainPage/Contact.astro
+++ b/src/components/mainPage/Contact.astro
@@ -4,7 +4,7 @@
 
 <div class="wrapper">
     <h1>Tyovuorolista.fi yhteystiedot</h1>
-    <p>True Solutions / Työvuorolista.fi</p>
+    <p>True Solutions / tyovuorolista.fi</p>
     <p>Y-tunnus: 3431534-2</p>
     <p>Juhannuskylänkatu 1 B 6, 33100 Tampere</p>
 	<p>Myynti: <a href='mailto:eemeli@tyovuorolista.fi'>eemeli@tyovuorolista.fi</a></p>
