Add MobileDemo component to main page layout for enhanced user engagement and mobile experience.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import CustomerStory from '../components/mainPage/CustomerStory.astro'
 import Register from '../components/mainPage/Register.astro'
 import ContactForm from '../components/mainPage/ContactForm.jsx'
 import Faq from '../components/mainPage/Faq.astro'
+import MobileDemo from '../components/mainPage/MobileDemo.astro'
 import NewestBlogPosts from '../components/mainPage/NewestBlogPosts.astro'
 ---
 
@@ -17,6 +18,7 @@ import NewestBlogPosts from '../components/mainPage/NewestBlogPosts.astro'
         <Register />
         <ContactForm client:load />
         <Faq />
+        <MobileDemo />
         <NewestBlogPosts />
     </main>
 </Layout>
