--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -36,6 +36,10 @@ import dayjs from 'dayjs'
         margin-top: 2.5rem;
     }
     
+    .blogWrapper :global(h4) {
+        margin-top: 2rem;
+    }
+    
     .metadata {
         font-size: 0.9rem;
         color: #666;
